Assigning sequel stories more cleanly and using the right index offset